--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "Gasolinera": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Gasolinera"
+    }
+  },
+  "defaultProject": "Gasolinera",
+  "cli": {
+    "analytics": "952cf254-81ce-4068-b553-9658dcb357d4"
+  }
 }
